--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> About
+<title> About me - Luis Aguirre
   </title>
 </head>
 <body>
-<h1>Hello World</h1>
+<h1>About</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
 
-# Tasks
+<!-- Tasks
+  # Generate a layout
+    # About
+    # Research
+    # CV
+    # Resume
+    # Publications
+    # PortfolioThis is a comment -->
