--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 <h1>About</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
+
+<!-- Research -->
+<!-- CV -->
+<!-- Resume -->
+<!-- Publications -->
+<!-- Portfolio -->
 </html>
 
-<!-- Tasks
-  # Generate a layout
-    # About
-    # Research
-    # CV
-    # Resume
-    # Publications
-    # PortfolioThis is a comment -->
